# notemind

./: .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: generate.py  health.py  outline.py  preprocess.py
backend/app/core/: config.py  dependencies.py  llm.py  prompts.py
backend/app/schemas/: api.py  outline.py  preprocess.py
backend/app/services/: audio.py  image.py  markdown_service.py  outline_service.py  pdf.py  video.py  web.py
backend/tests/: conftest.py  test_audio_service.py  test_config.py  test_health.py  test_image.py  test_llm.py  test_markdown_api.py  test_markdown_service.py  test_outline_api.py  test_outline_schema.py  test_outline_service.py  test_pdf_service.py  test_preprocess_api.py  test_video_service.py  test_web_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ApiKeyButton.tsx  ApiKeyDialog.tsx  AudioUpload.tsx  ConfirmDialog.tsx  DualPane.tsx  ExportMindmapButton.tsx  ImageDropzone.tsx  InputPanel.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  MindmapView.tsx  OutlineNodeRow.tsx  OutlineTree.tsx  PdfUpload.tsx  SaveNoteDialog.tsx  StyleDepthSelector.tsx  VideoUpload.tsx  WebFetch.tsx
frontend/src/lib/: api-key.ts  api.ts  image_utils.ts  markmap_export.ts  notes_db.ts  outline_parser.ts  types.ts
frontend/src/pages/: InputPage.tsx  NotePage.tsx  (+2 more)
scripts/: package-lock.json  package.json  record-demo.mjs
(+8 files in other folders)
